--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:analyze": "tsc && vite build --mode analyze",
+    "build:time": "echo 'Starting build...' && time npm run build",
     "preview": "vite preview",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.1",
@@ -38,14 +39,11 @@
     "date-fns": "^3.6.0",
     "diff": "^8.0.2",
     "framer-motion": "^12.0.0-alpha.1",
-    "html2canvas": "^1.4.1",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.3",
     "react-syntax-highlighter": "^15.6.1",
-    "recharts": "^2.14.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^4.1.8",
@@ -56,9 +54,7 @@
     "@types/node": "^22.15.30",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
-    "@types/sharp": "^0.32.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "sharp": "^0.34.2",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   },
